add: get post by id
