# docs/swagger.json
@@ -147,6 +147,34 @@
                 }
             }
         },
+        "/posts/{id}": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Posts"
+                ],
+                "summary": "Get Post By Id",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Post ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/responses.ResponseData"
+                        }
+                    }
+                }
+            }
+        },
         "/users": {
             "get": {
                 "produces": [
@@ -254,6 +282,9 @@
                 "password": {
                     "type": "string"
                 },
+                "title": {
+                    "type": "string"
+                },
                 "userName": {
                     "type": "string"
                 }
@@ -287,6 +318,9 @@
                     "type": "string"
                 },
                 "gender": {
+                    "type": "string"
+                },
+                "title": {
                     "type": "string"
                 },
                 "userName": {
