# internal/controllers/post.controller.go
@@ -93,3 +93,21 @@ func (pc PostController) Delete(ctx *gin.Context) {
 	result := pc.postService.Delete(uint(id))
 	responses.APIResponse(ctx, result.StatusCode, result.Message, result.Data)
 }
+
+// GetAll		 	godoc
+// @Summary			Get Post By Id
+// @Produce			application/json
+// @Param 			id  path  int  true  "Post ID"
+// @Tags			Posts
+// @Success      	200 {object}  responses.ResponseData
+// @Router			/posts/{id} [get]
+func (pc PostController) GetById(ctx *gin.Context) {
+	id, errParse := strconv.Atoi(ctx.Param("id"))
+
+	if  errParse != nil {
+		responses.APIResponse(ctx, 400, responses.StatusParamInvalid, nil)
+		return
+	}
+	result := pc.postService.GetById(uint(id))
+	responses.APIResponse(ctx, result.StatusCode, result.Message, result.Data)
+}
